--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^1.13.2",
     "core-js": "^3.6.5",
+    "dotenv": "^10.0.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
   },
